
load("//bazel_scripts/rules:cc.bzl",  "wpilib_cc_binary",  "wpilib_cc_library")
load("//bazel_scripts/rules/gen:gen-version-file.bzl",  "generate_version_file")
#load("//bazel_scripts/rules/gen:gen-stb.bzl",  "generate_stb_file")
load("//bazel_scripts/rules/gen:gen-resources.bzl",  "generate_resources")

wpilib_cc_library(
    name = "glass",
    srcs = glob(["src/lib/native/cpp/**/*.cpp"]),
    hdrs = glob(["src/lib/native/include/**/*.h", "src/lib/native/include/**/*.inl"]),
    includes = ["src/lib/native/include"],
    deps=[
        "//wpiutil:wpiutil-cpp",
        "//wpimath:wpimath-cpp",
        "//wpigui:wpigui",
        "@imgui-headers//:headers",
    ],
    tags = ['no-roborio', 'no-bionic', 'no-raspbian'],
)

wpilib_cc_library(
    name = "glassnt",
    srcs = glob(["src/libnt/native/cpp/**/*.cpp"]),
    hdrs = glob(["src/libnt/native/include/**/*.h", "src/lib/native/include/**/*.inc"]),
    includes = ["src/libnt/native/include"],
    deps=[
        ":glass",
        "//ntcore:ntcore-cpp",
        # "@imgui-headers//:headers",
    ],
    visibility=["//visibility:public"],
    tags = ['no-roborio', 'no-bionic', 'no-raspbian'],
)

generate_version_file(
    name = "generate-version",
    output_file="WPILibVersion.cpp",
    template = "src/app/generate/WPILibVersion.cpp.in",
)

generate_resources(
    name = "generate-resources",
    resource_files=glob(["src/app/native/resources/*"]),
)

wpilib_cc_binary(
    name = "glassApp",
    srcs = glob(["src/app/native/cpp/**/*.cpp", "src/app/native/cpp/**/*.h"]) + [":generate-version", ":generate-resources"],
    includes = ["src/app/native/include", "src/app/native/cpp", "src/generated/"],
    deps=[
        ":glassnt",
        "//ntcore:ntcore-cpp",
    ] + select({
            "@bazel_tools//src/conditions:windows": ["@imgui-windowsx86-64-libs//:libs"],
            "@bazel_tools//src/conditions:linux_x86_64": ["@imgui-linuxx86-64-libs//:libs"],
            "@bazel_tools//src/conditions:darwin": ["@imgui-osxx86-64-libs//:libs"],
    }),
    linkopts = select({
        "@bazel_tools//src/conditions:windows": [
            '-DEFAULTLIB:Gdi32.lib',
            '-DEFAULTLIB:Shell32.lib',
            '-DEFAULTLIB:d3d11.lib',
            '-DEFAULTLIB:d3dcompiler.lib',
            "-SUBSYSTEM:WINDOWS",
        ],
        "@bazel_tools//src/conditions:darwin": [
            '-framework', 'Metal',
            '-framework', 'MetalKit',
            '-framework', 'Cocoa',
            '-framework', 'IOKit',
            '-framework', 'CoreFoundation',
            '-framework', 'CoreVideo',
            '-framework', 'QuartzCore'
        ],

        "@bazel_tools//src/conditions:linux_x86_64": [
            '-lX11',
        ],
        "//conditions:default": [],
        }),
    tags = ['no-roborio', 'no-bionic', 'no-raspbian'],
    
    # TODO mac doesn't link right
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
