
load("//bazel_scripts/rules:cc.bzl", "wpilib_cc_library")
load("//bazel_scripts/rules:java.bzl", "wpilib_java_library")

wpilib_java_library(
    name = "myRobot-java",
    deps = [
        "//hal:wpiHal-java",
        "//wpilibj:wpilibj",
        "//cameraserver:cameraserver-java",
        "//cscore:cscore-java",
        "//ntcore:ntcore-java",
        "//wpimath:wpimath-java",

    ]
)

wpilib_cc_library(
    name="myRobot-cpp",
    deps=[
        "//hal:wpiHal-cpp",
        "//wpilibc:wpilibc-cpp",
        "//ntcore:ntcore-cpp",
        "//cscore:cscore-cpp",
        "//cameraserver:cameraserver-cpp",
        "//wpimath:wpimath-cpp",
    ],
    srcs=glob(["src/main/native/cpp/**/*.cpp"]),
    visibility=["//visibility:public"],
)
