load("@wpi_bazel_rules//rules:cc.bzl", "get_wpigui_linker_flags", "wpilib_cc_binary", "wpilib_cc_library")
load("@wpi_bazel_rules//rules/gen:gen-resources.bzl", "generate_resources")
load("@wpi_bazel_rules//rules/gen:gen-version-file.bzl", "generate_version_file")

generate_resources(
    name = "generate-resources",
    namespace = "ov",
    prefix = "Hello",
    resource_files = glob(["src/main/native/resources/*"]),
)

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "src/main/generate/WPILibVersion.cpp.in",
)

wpilib_cc_binary(
    name = "outlineviewer",
    srcs = ["src/main/native/cpp/main.cpp"] + [":generate-resources", ":generate-version"],
    linkopts = get_wpigui_linker_flags(console = False),
    raw_deps = [
        "//glass:libglass",
        "//glass:libglassnt",
    ],
    tags = [
        "no-bionic",
        "no-raspbian",
        "no-roborio",
    ],
)
