
load("//bazel_scripts/rules:cc.bzl", "wpilib_cc_library", "wpilib_cc_test", "DEFAULT_CC_TEST_INCLUDE_PATTERN", "DEFAULT_CC_TEST_SRC_PATTERN")
load("//bazel_scripts/rules/gen:gen-version-file.bzl",  "generate_version_file")


generate_version_file(
    name = "generate-version",
    output_file="WPILibVersion.cpp",
    template = "src/generate/WPILibVersion.cpp.in",
)


wpilib_cc_library(
    name="wpilibc-cpp",
    deps=[
        "//hal:wpiHal-cpp",
        "//ntcore:ntcore-cpp",
        "//cscore:cscore-cpp",
        "//cameraserver:cameraserver-cpp",
        "//wpimath:wpimath-cpp",
    ],
    srcs=glob(["src/main/native/cpp/**/*.cpp", "src/main/native/cppcs/**/*.cpp"]),
    gen_scrs = [":generate-version"],
    visibility=["//visibility:public"],
)

wpilib_cc_test(
    name = "wpilibc-cpp-test",
    srcs = glob(DEFAULT_CC_TEST_SRC_PATTERN + ["src/test/native/include/**/*.h"]),
    deps=[":wpilibc-cpp"],
    includes = DEFAULT_CC_TEST_INCLUDE_PATTERN + ["src/test/native/include"],
)
