load("@allwpilib_pip_deps//:requirements.bzl", "requirement")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_python//python:defs.bzl", "py_binary")
load("//wpilibj:generate.bzl", "generate_wpilibj")

py_binary(
    name = "generate_hids",
    srcs = ["generate_hids.py"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [requirement("jinja2")],
)

py_binary(
    name = "generate_pwm_motor_controllers",
    srcs = ["generate_pwm_motor_controllers.py"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [requirement("jinja2")],
)

py_binary(
    name = "generate_wpilibj_py",
    srcs = ["generate_wpilibj.py"],
    main = "generate_wpilibj.py",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        ":generate_hids",
        ":generate_pwm_motor_controllers",
    ],
)

generate_wpilibj(
    name = "generate_wpilibj",
)

write_source_files(
    name = "write_wpilibj",
    files = {
        "src/generated": ":generate_wpilibj",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_java",
    srcs = glob(["src/generated/main/java/**/*.java"]),
    visibility = ["//wpilibj:__subpackages__"],
)
